<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/background_main"
    android:orientation="vertical">

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar_a_settings" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="@dimen/space_20dp"
                android:paddingStart="@dimen/space_20dp">

                <Button
                    android:id="@+id/a_settings_barcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_settings_scan_qr"
                    android:background="@drawable/selector_border_white_body_transparent_to_white_with_big_corners"
                    android:textColor="@drawable/selector_change_white_color_to_blue_color" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_connection_block"
                android:orientation="vertical"
                android:paddingBottom="@dimen/space_30dp"
                android:paddingEnd="@dimen/space_10dp"
                android:paddingStart="@dimen/space_10dp"
                android:paddingTop="@dimen/space_10dp">

                <CheckBox
                    android:id="@+id/a_settings_auto_start_local"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/selector_checkbox"
                    android:checked="false"
                    android:paddingStart="10dp"
                    android:text="@string/app_settings_auto_start_local"
                    android:textSize="12sp"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/a_settings_auto_start_global"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_border_white_body_transparent_to_white_with_big_corners"
                    android:textColor="@drawable/selector_change_white_color_to_blue_color"
                    android:text="@string/app_settings_auto_start_global" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_settings_server_address"
                    android:textColor="@color/app_white_50"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/a_settings_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_white_50_to_light_blue_bottom_edit_text_view"
                    android:digits="0123456789."
                    android:inputType="number"
                    android:paddingBottom="@dimen/space_5dp"
                    android:textColor="@color/app_white"
                    android:textCursorDrawable="@drawable/drawable_cursor_white"
                    android:textSize="14sp"
                    tools:ignore="LabelFor,TextFields" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_settings_server_port"
                    android:textColor="@color/app_white_50"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/a_settings_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/selector_white_50_to_light_blue_bottom_edit_text_view"
                    android:digits="0123456789"
                    android:inputType="numberDecimal"
                    android:paddingBottom="@dimen/space_5dp"
                    android:textColor="@color/app_white"
                    android:textCursorDrawable="@drawable/drawable_cursor_white"
                    android:textSize="14sp"
                    tools:ignore="LabelFor,TextFields" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_settings_server_tts"
                    android:textColor="@color/app_white_50"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/a_settings_tts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/selector_white_50_to_light_blue_bottom_edit_text_view"
                    android:digits="0123456789"
                    android:inputType="numberDecimal"
                    android:paddingBottom="@dimen/space_5dp"
                    android:textColor="@color/app_white"
                    android:textCursorDrawable="@drawable/drawable_cursor_white"
                    android:textSize="14sp"
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_settings_server_id"
                    android:textColor="@color/app_white_50"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/a_settings_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/selector_white_50_to_light_blue_bottom_edit_text_view"
                    android:paddingBottom="@dimen/space_5dp"
                    android:textColor="@color/app_white"
                    android:textCursorDrawable="@drawable/drawable_cursor_white"
                    android:textSize="14sp"
                    tools:ignore="LabelFor,TextFields" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_settings_server_prefix"
                    android:textColor="@color/app_white_50"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/a_settings_prefix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/selector_white_50_to_light_blue_bottom_edit_text_view"
                    android:paddingBottom="@dimen/space_5dp"
                    android:textColor="@color/app_white"
                    android:textCursorDrawable="@drawable/drawable_cursor_white"
                    android:textSize="14sp"
                    tools:ignore="LabelFor,TextFields" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_settings_server_key"
                    android:textColor="@color/app_white_50"
                    android:textSize="12sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/light_gray">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/a_settings_key"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/selector_white_50_to_light_blue_bottom_edit_text_view"
                        android:inputType="textPassword"
                        android:paddingBottom="@dimen/space_5dp"
                        android:textColor="@color/app_white"
                        android:textCursorDrawable="@drawable/drawable_cursor_white"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal"
                    android:paddingEnd="@dimen/space_30dp"
                    android:paddingStart="@dimen/space_30dp">

                    <Button
                        android:id="@+id/a_settings_cancel"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/space_35dp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_border_white_body_transparent_to_white_with_big_corners"
                        android:textColor="@drawable/selector_change_white_color_to_blue_color"
                        android:text="@string/app_settings_cancel" />

                    <Space
                        android:layout_width="@dimen/space_20dp"
                        android:layout_height="match_parent" />

                    <Button
                        android:id="@+id/a_settings_save"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/space_35dp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_border_white_body_transparent_to_white_with_big_corners"
                        android:textColor="@drawable/selector_change_white_color_to_blue_color"
                        android:text="@string/app_settings_save" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</LinearLayout>